--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,8 @@ menu {
 .hero {
   max-width: 1440px;
   width: 320px;
-
+  padding-top: 72px;
+  padding-bottom: 72px;
   margin-top: 72px;
   background-repeat: no-repeat;
   background-position: center;
@@ -377,16 +378,16 @@ menu {
 .hero-header {
   color: var(--WHITE, #fff);
   text-align: center;
-
+  max-width: 216px;
   font-family: Roboto;
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
   font-style: normal;
   line-height: 1.07;
   letter-spacing: 0.02em;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 36px;
+  margin-bottom: 72px;
   max-width: 432px;
 }
 
@@ -1299,8 +1300,8 @@ input[type='checkbox']:checked + label > .modal-form-checkbox-label-span{
   top: 24px;
   right: 24px;
 
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
 
   border-radius: 50%;
 
